--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="margin: auto; text-align: center;">
     Hi, my name is Ronit Sharma<br><br>
-    This is my <a href="https://github.com/RonitSharma705/Python-Programs">Python-Programs</a>
+<a href="https://github.com/RonitSharma705/Python-Programs">Python-Programs</a>
 </body>
 </html>
